# psioProjekt

./: .gitignore  README.md
Experimental/: .gitignore  frontend.py  makefile
Experimental/src/: Config.cpp  Config.h  Image.cpp  Image.h  ObjectDetection.cpp  ObjectDetection.h  SocketErrors.h  Sockets.cpp  Sockets.h  TaskStack.cpp  TaskStack.h  main.cpp
ImageRecognition/: .clang-format  CMakeLists.txt  Config.cpp  Config.h  Image.cpp  Image.h  ImageDetection.cpp  ImageDetection.h  ImageRecognition.cpp  ImageRecognition.h  Labeler.cpp  Labeler.h  ObjectClassifier.cpp  ObjectClassifier.h  ObjectDetection.cpp  ObjectDetection.h  Predictor.cpp  Predictor.h  StreamReciver.cpp  StreamReciver.h  TaskStack.cpp  TaskStack.h  init_opencv.bat  main.cpp  test.cpp
ImageRecognition/common/: Config.h  Exceptions.h  SystemType.h
ImageRecognition/common/async/: ThreadPool.cpp  ThreadPool.h
ImageRecognition/detection/: ObjectDetection.cpp  ObjectDetection.h
ImageRecognition/input/: Command.cpp  Command.h  CommandLine.cpp  CommandLine.h  Exceptions.h
ImageRecognition/network/: CameraConnection.cpp  CameraConnection.h  Exceptions.h
ImageRecognition/ui/: Display.cpp  Display.h  Exceptions.h
Obiekty 3d/: PodporaSurowy.3mf
Obiekty 3d/bierznia/: bierznia druk1.3mf  czesc-do-walka-specjal_x1.stl  czesc-do-walka_x3.stl  podpora_x2.stl  ramie_x4.stl  walek_x2.stl
application/: main.py
